# BEVFusionE2E

./: BEVFUSION_FINAL_SUMMARY.md  CMakeLists.txt  test_bevfusion_alg.cpp
configs/algorithm/: BEVFusionAlgConfig.conf
src/: CMakeLists.txt  bevfusion_alg_implement.cpp  bevfusion_alg_implement.h  export_bevfusion_alglib.cpp  export_bevfusion_alglib.h  main.cpp
src/bevfusion/: bevfusion.cpp  lidar-scn-onnx-parser.cpp
src/onnx/: make_pb.sh
submodules/fastddsser/: CMakeLists.txt
submodules/fastddsser/data/: CAlgResult.cxx  CAlgResult.h  CAlgResultCdrAux.hpp  CAlgResultCdrAux.ipp  CAlgResultPubSubTypes.cxx  CAlgResultPubSubTypes.h  CTimeMatchSrcData.cxx  CTimeMatchSrcData.h  CTimeMatchSrcDataCdrAux.hpp  CTimeMatchSrcDataCdrAux.ipp  CTimeMatchSrcDataPubSubTypes.cxx  CTimeMatchSrcDataPubSubTypes.h
submodules/protoser/: CMakeLists.txt
submodules/protoser/param/: BEVFusionConfig.pb.cc  BEVFusionConfig.pb.h  CameraConfig.pb.cc  CameraConfig.pb.h
submodules/protoser/proto/: BEVFusionConfig.proto  CameraConfig.proto  generate.sh
tool/: build_trt_engine.sh  environment.sh  params_read.py  run.sh
